Prevent history buttons from breaking out of box

--- a/src/main/scss/header.scss
+++ b/src/main/scss/header.scss
@@ -216,6 +216,7 @@ header {
 
   .history-buttons {
     display: inline-block;
+    white-space: nowrap;
 
     margin-top: 10px;
     margin-right: 20px;
